Closed Bug 30790 Opened 25 years ago Closed 25 years ago

Click on URL that references image; image loads in Mail, not browser

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sol, Assigned: mscott)

Details

If you click on a URL that references an image file (like a JPEG), rather than an html file, the image referenced by the URL loads in the Mail message pane, instead of launching a browser window to display the image. Build ID - 2000-03-06-14 on WinNT Steps to reproduce: 1. Launch Mail (Tasks | Mail); authenticate if necessary 2. Find an message that contains a URL that references an image file, rather than an html page (e.g., http://not_real_domain.com/example.jpg); click on the URL Expected: Browser launches and loads image referenced by the URL Actual: The image referenced by the URL is loaded in the message pane of Mail 3-pane UI Note: I have not tried other image types (.gif, etc.)
Status: NEW → ASSIGNED
Target Milestone: M15
I have a fix for this in my tree.
Scott - I think this is a release note for Beta 1, and I'd recommend you check the fix into the trunk. Do you agree?
Hey Sol I apologize for any confusion. I actually have this bug targeted for M15 which is not beta1. My comments were directed towards checking a fix into the tip. I definetely wasn't talking about the beta1 branch =).....
Fixed. the browser window content handler is now properly registered to handle content types for images, text/xul, and some others. It used to only step in for text/html. Now if you click on a url that has any of these other content types (such as image/jpeg, etc) we'll create a new browser window instead of trying to display them in the mail window.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
QA Contact: lchiang → laurel
OK using: 2000-04-10-09m15 commercial build NT 4.0 2000-04-10-09m15 commercial build linux rh6.0 2000-04-10-10m15 commercial build mac OS 9.0 The image url works okay if the browser is already open. If the browser is not already open, I'm seeing trouble launching the url consistently. In fact have seen a couple crashes. Will mark this bug verified, since we no longer display the image in the message pane and will log the problem(s) seen when browser is closed as separate issue(s).
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.