Bug #30790 --> regiser browser window to be the default content handler for other content types besides text/html. no reviewer due to the trivial nature of the change.